--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     </header>
     <main>
         <section>
-            <h3>Ingrese el texto a encriptar</h3>
+            <h3>Ingrese el texto a encriptar o desencriptar</h3>
             <div>
-                <textarea id="areaUno" name="textarea" placeholder="Solo letras en minusculas sin caracteres especiales" autofocus required></textarea><br><br>
+                <textarea class="text-area" type="text" name="textarea-text" id="textarea-text" placeholder="Solo letras en minusculas sin caracteres especiales" autofocus required></textarea><br><br>
                 <div class="buttonCenter">
                      <button class="btn" id="encriptar"><strong>Encriptar</strong></button>
                 <button class="btn" id="desencriptar"><strong>Desencriptar</strong></button>
                 </div>
             </div>      
-            <h3>Ingrese el texto a desencriptar</h3>
+            <h3>Mensaje Encriptado</h3>
             <div>
-                <textarea id="areaDos" name="textarea" required></textarea><br><br>
+                <textarea id="msg" name="textarea-text" required></textarea><br><br>
                 <div class="buttonCenter">
                     <button class="btn" id="copiar"><strong>Copiar</strong></button>
                 </div>
